projects now show correctly on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -568,20 +568,33 @@ body {
   justify-content: center;
   align-items: center;
 }
+@media screen and (min-width: 640px) {
+  .projects-container {
+    flex-direction: row;
+    width: 80%;
+  }}
 @media screen and (min-width: 1140px) {
   .projects-container {
     flex-direction: row;
-    width: 65%;
-  }
-}
+    width: 70%;
+  }}
+
 
 .project-1, .project-2, .project-3, .project-4, .project-5, .project-6 {
-  width: 30%;
+  width: 80%;
   background-color: rgba(56, 56, 56, 0.8);
   border-radius: 10px;
   padding: 10px;
-  transition: background-color 0.2s ease-in-out;
-}
+  transition: background-color 0.2s ease-in-out;}
+  @media screen and (min-width: 640px) {
+  .project-1, .project-2, .project-3, .project-4, .project-5, .project-6 {
+   width: 30%;
+  }}
+@media screen and (min-width:1440px) {
+  .project-1, .project-2, .project-3, .project-4, .project-5, .project-6 {
+    width: 30%;
+  }}
+
 
 .project-1:hover, .project-2:hover, .project-3:hover, .project-4:hover, .project-5:hover, .project-6:hover {
   background-color: rgba(72, 63, 236, 0.8);
